[HuyNH-HF] Fix Sonar-Lint